<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dēśa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search By</string>
    <string name="search_button">Search</string>
    <string name="input_hint">Enter Text</string>
	<string name="capital_placeholder">Capital</string>
	<string name="region_placeholder">Region</string>
	<string name="subregion_placeholder">Sub-Region</string>
	<string name="population_placeholder">Population</string>
	<string name="area_placeholder">Area</string>
	<string name="timezones_placeholder">Timezones</string>
	<string name="borders_placeholder">Shared Border With</string>
	<string name="nativename_placeholder">Native Name</string>
	<string name="callingcodes_placeholder">Calling Codes</string>
	<string name="currencies_placeholder">Currencies</string>
	<string name="languages_placeholder">Languages</string>
    <string-array name="search_options">
        <item>Name</item>
        <item>Capital</item>
        <item>Calling Code</item>
        <item>Currency</item>
        <item>Region</item>
        <item>Subregion</item>
    </string-array>

    <string name="title_activity_dialog">Dialog</string>
    <string name="title_activity_list_template">ListTemplate</string>
    <string name="title_activity_details">Details</string>

</resources>
