<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abc.restc.Details" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:orientation="vertical"
    	android:layout_height="wrap_content">
        <fragment
	        android:id="@+id/map"
	        android:name="com.google.android.gms.maps.MapFragment"
	        android:layout_width="match_parent"
	        android:layout_height="256sp"/>
        <TextView 
            android:id="@+id/capital_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/capital_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/capital"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/region_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/region_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/region"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
      	<View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/subregion_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/subregion_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/subregion"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/population_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/population_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/population"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/area_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/area_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/area"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/timezones_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/timezones_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/timezones"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/borders_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/borders_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/borders"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/nativename_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/nativename_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/nativename"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/callingcodes_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/callingcodes_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/callingcodes"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/currencies_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/currencies_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/currencies"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
        <TextView 
            android:id="@+id/languages_placeholder"
            android:layout_width="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:text="@string/languages_placeholder"
            android:layout_height="wrap_content"/>
        <TextView 
            android:id="@+id/languages"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View 
		   android:layout_width="match_parent"
		   android:layout_height="1dp"       
		   android:background="@android:color/darker_gray" />
   	</LinearLayout>
</ScrollView>
